# GoGitguru

./: .air.toml  .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.dev.api  Dockerfile.dev.reposync  Dockerfile.dev.usersync  Dockerfile.reposync  Dockerfile.usersync  HelpfulDockerCommands.md  README.md  a.sh  boot-all.bat  boot-db.bat  boot.bat  boot.sh  cloneRepoAndUploadTarballToS3.go  dlog.sh  emailinserter.js  go.mod  go.sum  go.work  go.work.sum  handler_add.go  handler_add_test.go  handler_version.go  insert_emails.sql  json.go  main.go  nixos_emails.txt  output.json  polygonrepos.js  polygonrepos.txt  repos.sql  sqlc.yaml  sync.go  td.sh  (+1 more)
.github/workflows/: build-gitguru.yml  (+5 more)
database/: commits.sql.go  db.go  dependencies.sql.go  dependencies_to_github.sql.go  dependencies_to_repos.sql.go  file_patterns.sql.go  github_repos.sql.go  go.mod  models.go  repo_latest_commits.sql.go  repo_urls.sql.go  repos_to_dependencies.sql.go  rest_id_to_email.sql.go  users.sql.go  users_to_dependencies.sql.go  users_to_repos.sql.go
dbscripts/: .air.toml  go.mod  go.sum  main.go
reposync/: .air.toml  go.mod  go.sum  main.go
reposync/mock/: .cabal  Cargo.toml  Gemfile  Pipfile  build.gradle  composer.json  go.mod  package.json  pom.xml  requirements.txt
reposync/mock/openqdev/: Cargo.toml  Pipfile  requirements.txt
reposync/src/mock/: .cabal  Gemfile  Pipfile  build.gradle  composer.json  go.mod  package.json  pom.xml
server/: .air.toml  go.mod  go.sum  main.go
usersync/: .air.toml  go.mod  go.sum  main.go
util/: go.mod
(+494 files in other folders)
