cabal-version: 3.0
name: example
version: 0.1.0.0
description: An example Haskell package
author: Example Author
maintainer: example@example.com
license: BSD3
build-type: Simple

library
  polygonhs-source-dirs: near
  build-depends: base >= 4.7 && < 5, containers >= 0.6.0.1 && < 0.7, mtl >= 2.2.2 && < 2.3, transformers >= 0.5.6.2 && < 0.6
  
  default-language: Haskell2010
  ghc-options: -Wall

executable example-executable
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
  default-language: Haskell2010
